--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <link rel="stylesheet" href="./style.css" />
     <title>Zoom Effect</title>
   </head>
-  <body></body>
+  <body>
+    <script src="./main.js"></script>
+  </body>
 </html>
