--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Zoom Effect</title>
   </head>
   <body>
+    <h2>Hawaii! 🏝</h2>
+    <div id="wrapper">
+      <img
+        src="https://images.unsplash.com/photo-1495822892661-2ead864e1c7b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2089&q=80"
+        alt="Hawaii photo"
+      />
+    </div>
     <script src="./main.js"></script>
   </body>
 </html>
